--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="fl">
                 <ul>
                     <li>品优购欢迎您！</li>
-                    <li><a href="#">请登录</a></li>&nbsp;&nbsp;
+                    <li><a href="log-on.html">请登录</a></li>&nbsp;&nbsp;
                     <li><a href="register.html" class="red">免费注册</a></li>
                 </ul>
             </div>
@@ -217,6 +217,58 @@
             </ul>
         </div>
     </div>
+    <!-- 猜你喜欢模块制作 -->
+    <div class="w like">
+        <div class="like-hd">
+            <h3>猜你喜欢</h3>
+            <a href="#" class="change">换一批</a>
+        </div>
+        <div class="like-bd">
+            <ul>
+                <li><img src="upload/like1.png" alt=""></li>
+                <li><img src="upload/like2.png" alt=""></li>
+                <li><img src="upload/like3.png" alt=""></li>
+                <li style="padding-top: 15px;"><img src="upload/like4.png" alt=""></li>
+                <li><img src="upload/like5.png" alt=""></li>
+                <li><img src="upload/like6.png" alt=""></li>
+            </ul>
+        </div>
+    </div>
+    <!-- 有趣区模块制作 -->
+    <div class="w funny">
+        <div class="funny-hd">
+            <h3>传智播客-有趣区</h3>
+        </div>
+        <div class="funny-bd">
+            <div class="col-393">
+                <a href="#"><img src="upload/funny1.png" alt=""></a>
+            </div>
+            <div class="col-227">
+                <div class="top">
+                    <h3>好东西</h3>
+                </div>
+                <div class="middle">
+                    <img src="upload/funny2-top.png" alt="">
+                </div>
+                <div class="bottom">
+                    <img src="upload/funny2-bottom.png" alt="">
+                </div>
+            </div>
+            <div class="col-406">
+                <div class="top">
+                    <h3>品牌街</h3>
+                </div>
+                <div class="middle">
+                    <img src="upload/funny3-top.png" alt="">
+                </div>
+                <div class="bottom">
+                    <div class="bl"><img src="upload/funny3-bl.png" alt=""></div>
+                    <div class="br"><img src="upload/funny3-br.png" alt=""></div>
+                </div>
+            </div>
+            <div class="col-164"><img src="upload/funny4.png" alt=""></div>
+        </div>
+    </div>
     <!-- 楼层模块制作 -->
     <div class="floor clearfix">
         <!-- 1楼家电模块 -->
@@ -254,43 +306,35 @@
                             </a>
                         </div>
                         <div class="col-329">
-                            <a href="#">
-                                <img src="upload/jiadian2.png">
-                            </a>
+                            <a href="#"><img src="upload/jiadian2.png"></a>
                         </div>
                         <div class="col-220">
                             <div class="bb-1">
-                                <a href="#">
-                                    <img src="upload/jiadian3-top.png">
-                                </a>
+                                <a href="#"><img src="upload/jiadian3-top.png"></a>
                             </div>
                             <div class="bb-2">
-                                <a href="#">
-                                    <img src="upload/jiadian3-botttom.png">
-                                </a>
+                                <a href="#"><img src="upload/jiadian3-botttom.png"></a>
                             </div>
                         </div>
-                        <div class="col-220">
-                            <a href="#" class="mt">
-                                <img src="upload/jiadian4.png">
-                            </a>
+                        <div class="col-221">
+                            <a href="#" class="mt"><img src="upload/jiadian4.png"></a>
                         </div>
-                        <div class="col-220">
+                        <div class="col-219">
                             <div class="bb-1">
-                                <a href="#">
-                                    <img src="upload/jiadian5-top.png">
-                                </a>
+                                <a href="#"><img src="upload/jiadian5-top.png"></a>
                             </div>
                             <div class="bb-2">
-                                <a href="#">
-                                    <img src="upload/jiadian5-bottom.png">
-                                </a>
+                                <a href="#"><img src="upload/jiadian5-bottom.png"></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="pinpai">
+                <img src="upload/jiadian-pp.png" alt="">
+            </div>
         </div>
+
         <!-- 2楼手机模块 -->
         <div class="w shouji">
             <div class="box-hd">
@@ -321,48 +365,107 @@
                                 <li><a href="#">金属机身</a></li>
                                 <li><a href="#">高清屏</a></li>
                             </ul>
-                            <a href="#">
-                                <img src="upload/shouji1.png">
-                            </a>
+                            <a href="#"><img src="upload/shouji1.png"></a>
                         </div>
                         <div class="col-329">
-                            <a href="#">
-                                <img src="upload/shouji2.png">
-                            </a>
+                            <a href="#"><img src="upload/shouji2.png"></a>
                         </div>
                         <div class="col-220">
                             <div class="bb-1">
-                                <a href="#">
-                                    <img src="upload/shouji3-top.png">
-                                </a>
+                                <a href="#"> <img src="upload/shouji3-top.png"></a>
                             </div>
                             <div class="bb-2">
-                                <a href="#">
-                                    <img src="upload/shouji3-bottom.png">
-                                </a>
+                                <a href="#"> <img src="upload/shouji3-bottom.png"></a>
                             </div>
                         </div>
-                        <div class="col-220">
+                        <div class="col-221">
                             <a href="#" class="mt">
                                 <img src="upload/shouji4.png">
                             </a>
                         </div>
-                        <div class="col-220">
+                        <div class="col-219">
                             <div class="bb-1">
-                                <a href="#">
-                                    <img src="upload/shouji5-top.png">
-                                </a>
+                                <a href="#"> <img src="upload/shouji5-top.png"></a>
                             </div>
                             <div class="bb-2">
-                                <a href="#">
-                                    <img src="upload/shouji5-bottom.png">
-                                </a>
+                                <a href="#"> <img src="upload/shouji5-bottom.png"></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="pinpai">
+                <img src="upload/shouji-pp.png" alt="">
+            </div>
         </div>
+        <!-- 3楼电脑模块 -->
+        <div class="w diannao">
+            <div class="box-hd">
+                <h3>电脑办公</h3>
+                <div class="tab-list">
+                    <ul>
+                        <li><a href="#">热门</a>|</li>
+                        <li><a href="#">电脑/平板</a>|</li>
+                        <li><a href="#">潮流影音</a>|</li>
+                        <li><a href="#">智能/外设</a>|</li>
+                        <li><a href="#">DIY硬件</a>|</li>
+                        <li><a href="#">电竞游戏</a>|</li>
+                        <li><a href="#">办公/网络</a>|</li>
+                        <li><a href="#">文具电教</a>|</li>
+                        <li><a href="#">精选配件</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box-bd">
+                <div class="tab-content">
+                    <div class="tab-list-item">
+                        <div class="col-211">
+                            <ul>
+                                <li><a href="#">SSD硬盘</a></li>
+                                <li><a href="#">显示器</a></li>
+                                <li><a href="#">机械键盘</a></li>
+                                <li><a href="#">台式机</a></li>
+                                <li><a href="#">组装电脑</a></li>
+                                <li><a href="#">配件专区</a></li>
+                            </ul>
+                            <a href="#"> <img src="upload/diannao1.png"></a>
+                        </div>
+                        <div class="col-329">
+                            <a href="#"> <img src="upload/diannao2.png"> </a>
+                        </div>
+                        <div class="col-220">
+                            <div class="bb-1">
+                                <a href="#"><img src="upload/diannao3-top.png"></a>
+                            </div>
+                            <div class="bb-2">
+                                <a href="#"><img src="upload/diannao3-bottom.png"></a>
+                            </div>
+                        </div>
+                        <div class="col-221">
+                            <a href="#" class="mt">
+                                <img src="upload/diannao4.png">
+                            </a>
+                        </div>
+                        <div class="col-219">
+                            <div class="bb-1">
+                                <a href="#"><img src="upload/diannao5.png"></a>
+                            </div>
+                            <div class="bb-2">
+                                <a href="#"><img src="upload/shouji3-top.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pinpai">
+                <img src="upload/diannao-pp.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- 热门模块制作 -->
+    <div class="w hot">
+        <a href="#"><img src="upload/hot.png" alt=""></a>
+        <h3>热门疯抢</h3>
     </div>
     <!-- footer尾部制作 -->
     <footer class="footer">
