--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
         </header>
         <div class="registerarea">
             <h3>注册新用户
-                <div class="login">我有账号，去<a href="#">登陆</a></div>
+                <div class="login">我有账号，去<a href="log-on.html">登陆</a></div>
             </h3>
             <div class="reg-form">
                 <form action="">
